sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:5: error: not found: value a
    a=1
    ^AlgInsertionSort:6: error: not found: value a
    while(i-a>=0 && !plusPetitQue(i-a,v)){
            ^AlgInsertionSort:6: error: not found: value a
    while(i-a>=0 && !plusPetitQue(i-a,v)){
                                    ^AlgInsertionSort:7: error: not found: value temp
      temp=getValeur(i);
      ^AlgInsertionSort:8: error: not found: value a
      copie(i-a, i-a+1)
              ^AlgInsertionSort:8: error: not found: value a
      copie(i-a, i-a+1)
                   ^AlgInsertionSort:9: error: not found: value a
      a=a+1;
      ^AlgInsertionSort:11: error: not found: value a
    setValeur(a-i+1,v);
              ^